--- a/app/src/main/res/layout/activity_sign__up.xml
+++ b/app/src/main/res/layout/activity_sign__up.xml
@@ -17,7 +17,7 @@
         android:textSize="25dp"
         android:background="#F77F76"
         />
-    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <TableLayout
         android:id="@+id/t1"
         android:layout_width="384dp"
         android:layout_height="match_parent"
@@ -149,7 +149,7 @@
 
 
         <TableRow
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:paddingTop="13dp">
 
@@ -163,20 +163,20 @@
             android:text="DOB :"
              />
 
-        <EditText
-            android:id="@+id/dobEditText"
-            android:layout_marginRight="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Enter date of birth"
-            android:inputType="number"
-            android:textSize="15dp"
+            <Button
+                android:id="@+id/dobEditText"
+                android:layout_width="10dp"
+                android:layout_height="45dp"
+                android:layout_marginRight="90dp"
+                android:text="Select"
+                android:inputType="number"
+                android:textSize="15dp"
 
 
-           />
+                />
 
 
-    </TableRow>
+        </TableRow>
 
     <TableRow
         android:layout_width="200dp"
