--- a/app/src/main/res/layout/activity_mouse_activity.xml
+++ b/app/src/main/res/layout/activity_mouse_activity.xml
@@ -41,7 +41,7 @@
 
         </LinearLayout>
 
-        <LinearLayout
+       <!-- <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="20dp">
@@ -60,7 +60,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp" />
 
-        </LinearLayout>
+        </LinearLayout>-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
