--- a/app/src/main/res/layout/spinner_item_add.xml
+++ b/app/src/main/res/layout/spinner_item_add.xml
@@ -24,4 +24,53 @@
             android:inputType="textPersonName"
             android:text="Name" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="90dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="90dp"
+            android:text="KeyBoard-BrandName" />
+
+        <EditText
+            android:id="@+id/keyboard_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:layout_marginTop="90dp"
+            android:inputType="textPersonName"
+            android:text="Name" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="90dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="90dp"
+            android:text="KeyBoard-BrandName" />
+
+        <EditText
+            android:id="@+id/keyboard_type8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:layout_marginTop="90dp"
+            android:inputType="textPersonName"
+            android:text="Name" />
+    </LinearLayout>
 </LinearLayout>
