--- a/app/src/main/res/layout/activity_repaire.xml
+++ b/app/src/main/res/layout/activity_repaire.xml
@@ -33,7 +33,7 @@
         android:layout_marginLeft="130dp"
         android:id="@+id/repair_scnbtn"
         android:layout_marginTop="90dp"
-        android:onClick="scanQR"
+        android:onClick="scanBar"
         android:gravity="center"
         android:text="Scan">
 
