--- a/app/src/main/res/layout/activity_stock_in.xml
+++ b/app/src/main/res/layout/activity_stock_in.xml
@@ -54,7 +54,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginRight="90dp"
                     android:gravity="center"
-                    android:onClick="scanQR"
+                    android:onClick="scanBar"
                     android:text="Scan " />
             </TableRow>
 
