--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
 
     <color name="contact_name">#333333</color>
     <color name="contact_number">#8c8c8c</color>
+    <color name="splashbacground">#F15F31</color>
+    <color name="design_default_color_background">#FFFFFF</color>
 
 </resources>
