--- a/app/src/main/res/layout/activity_stock_in.xml
+++ b/app/src/main/res/layout/activity_stock_in.xml
@@ -10,14 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#F77F76"
-            android:gravity="center"
-            android:text="Stock IN "
-            android:textSize="25dp"
-            android:textStyle="bold" />
+
         <TextView
             android:layout_width="100dp"
             android:layout_height="match_parent"
@@ -58,27 +51,6 @@
                     android:text="Scan " />
             </TableRow>
 
-           <!-- <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingTop="13dp">
-
-                <TextView
-                    android:id="@+id/ITEM_Category"
-                    android:layout_width="20dp"
-                    android:layout_height="45dp"
-                    android:text="ITEM Category:"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <Spinner
-                    android:id="@+id/stockin_spinner"
-                    android:layout_width="220dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="1dp"
-                    android:entries="@array/select"></Spinner>
-
-            </TableRow>-->
 
 
 
@@ -99,7 +71,7 @@
 
                 <EditText
                     android:id="@+id/additem_storageLocaET"
-                    android:layout_width="match_parent"
+                    android:layout_width="254dp"
                     android:layout_height="28dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/border_table"
@@ -288,7 +260,7 @@
                     android:layout_height="28dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/border_table"
-                    android:hint=""
+                    android:hint="Enter quantity"
                     android:layout_marginTop="0dp"
                     android:inputType="number"
                     android:textSize="15dp"
