--- a/app/src/main/res/layout/activity_stock__out.xml
+++ b/app/src/main/res/layout/activity_stock__out.xml
@@ -9,15 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Stock OUT "
-            android:gravity="center"
-            android:textStyle="bold"
-            android:textSize="25dp"
-            android:background="#F77F76"
-            />
+
         <TextView
             android:layout_width="100dp"
             android:layout_height="match_parent"
@@ -56,54 +48,7 @@
                     android:onClick="scanBar"
                     android:text="Scan " />
             </TableRow>
-           <!-- <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingTop="13dp">
 
-                <TextView
-                    android:id="@+id/ITEM_Category"
-                    android:layout_width="20dp"
-                    android:layout_height="45dp"
-                    android:text="ITEM Category:"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <Spinner
-                    android:id="@+id/stockout_spinner"
-                    android:layout_width="197dp"
-                    android:layout_height="30dp"
-
-                    android:layout_marginLeft="1dp"
-                    android:entries="@array/select"></Spinner>
-
-            </TableRow>
--->
-           <!-- <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:paddingTop="13dp">
-
-                <TextView
-                    android:id="@+id/stockout_modelno"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-
-                    android:text="Model no :"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:id="@+id/stockout_modelnoET"
-                    android:layout_width="231dp"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="0dp"
-                    android:background="@drawable/border_table"
-                    android:hint="Enter model no"
-                    android:textSize="15dp" />
-
-            </TableRow>
--->
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
@@ -133,7 +78,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/billno"
@@ -158,7 +103,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/uniqid"
@@ -183,7 +128,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/cname"
@@ -209,7 +154,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/stockout_conNo"
@@ -238,7 +183,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/address"
@@ -272,7 +217,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/availableQuantity"
@@ -290,7 +235,7 @@
                     android:layout_marginRight="5dp"
                     android:background="@drawable/border_table"
                     android:layout_marginTop="0dp"
-                    android:hint=""
+                    android:hint="Enter quantity"
                     android:inputType="number"
                     android:textSize="15dp"
 
@@ -302,7 +247,7 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:paddingTop="13dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/load"
@@ -335,7 +280,7 @@
             android:layout_width="90dp"
             android:layout_height="32dp"
             android:layout_marginLeft="110dp"
-            android:layout_marginTop="500dp"
+            android:layout_marginTop="550dp"
             android:onClick="openStockInPage"
             android:text="Open page"
             android:textSize="10dp" />
@@ -345,7 +290,7 @@
             android:layout_height="30dp"
             android:src="@drawable/plus_button"
             android:layout_marginLeft="314dp"
-            android:layout_marginTop="500dp"
+            android:layout_marginTop="550dp"
             android:id="@+id/stockout_img"
             android:onClick="addstockOut"
 
@@ -354,7 +299,7 @@
         <Button
             android:layout_width="200dp"
             android:layout_height="45dp"
-            android:layout_marginTop="550dp"
+            android:layout_marginTop="600dp"
             android:gravity="center"
             android:id="@+id/stockout_submitbtn"
             android:layout_marginLeft="130dp"
